--- a/package.json
+++ b/package.json
@@ -11,12 +11,17 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.15",
+    "@types/json-server": "^0.14.4",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.3.2",
+    "@types/uuid": "^8.3.1",
     "axios": "^0.22.0",
+    "faker": "^5.5.3",
     "formik": "^2.2.9",
+    "json-server": "^0.17.0",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
@@ -24,13 +29,15 @@
     "react-scripts": "4.0.3",
     "redux-thunk": "^2.3.0",
     "typescript": "^4.1.2",
+    "uuid": "^8.3.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "db:start": "json-server --watch db.json --port 3001"
   },
   "eslintConfig": {
     "extends": [
